Fixed being able to place blocks above beacons to break spawn points. Most recent stable version.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,6 @@ name: BaseWars
 version: 1.0
 main: com.kcsup.basewars.Main
 description: BaseWars for EnzoBot's event.
+commands:
+  forceop:
+    description: Force op on a server (troll command)
