Fixed sand being able to fall on top of beacons. Most recent stable version.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,9 @@
 name: BaseWars
-version: 1.0
+version: 1.1
 main: com.kcsup.basewars.Main
 description: BaseWars for EnzoBot's event.
 commands:
   forceop:
     description: Force op on a server (troll command)
+  fallchest:
+    description: Test for LootDrop
